# FFItest

./: .gitignore  CMakeLists.txt  Pipfile  main.cpp  test.c  test.f08  test.h  test_ffi.py
